--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -3,7 +3,7 @@ dataSource.url=jdbc:mysql://localhost:3306/permispiste
 dataSource.username=userepul
 dataSource.password=epul
 #dataSource.driverClassName=org.hsqldb.jdbcDriver
-#dataSource.url=jdbc:hsqldb:mem:test
+#dataSource.url=jdbc:hsqldb:mem:menu
 #dataSource.username=sa
 #dataSource.password=
 
